# pyb

./: .coveragerc  .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.html  README.md  blender_geo.py  example_primitives.py  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  pyb.blender_geo.html  pyb.blender_matl.html  pyb.blender_mats_utils.html  pyb.blender_render.html  pyb.blender_test.html  pyb.brender_01.html  pyb.html  pyb.py  pyb.pyb.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.py
.github/workflows/: README.md  publish.yml  test.yml
_modules/: index.html  pyb.html
_sources/: README.txt  pyb.blender_mats_utils.txt  pyb.pyb.txt  pyb.txt
bpwf/: __init__.py  blender_mats_utils.py  bpwf.py  mcp_server.py
docs/: Makefile  conf.py  index.rst  modules.rst  pyb.blender_geo.rst  pyb.blender_matl.rst  pyb.blender_mats_utils.rst  pyb.blender_render.rst  pyb.blender_test.rst  pyb.brender_01.rst  pyb.pyb.rst  pyb.rst
pyb/: blender_render.py  pyb.py
tests/: README.md  brender_01.blend  brender_01.blend1  conftest.py  cutaway_test.blend  cutaway_test.blend1  cutaway_test.py  test1.bvox  test_8bit.raw  test_bpwf_core.py  test_cutaway.ipynb  test_file_stream.py  test_integration.py  test_vrend.ipynb
